# LudumDare43_SacrificesMustBeMade

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: ASSETS_LICENSE  LDJam43_00.mmpz  LDJam43_01.mmpz  LDJam43_sfx.mmpz
buildWin/: Makefile
src/: CommonFunctions.cpp  CommonFunctions.hpp  CommonValues.cpp  CommonValues.hpp  ECStuff.cpp  ECStuff.hpp  main.cpp
